cluster/apps/frontend/nitter/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nitter
  namespace: frontend
spec:
  selector:
    app: nitter
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
